src/tests/fixtures/custom_scalars/SpecifiedByOnEnum.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlEnum
 * @gqlAnnotate specifiedBy(url: "https://tools.ietf.org/html/rfc4122")
 */
export type MyEnum = "A" | "B" | "C";

-----------------
OUTPUT
-----------------
GraphQL request:1:1 - error: Directive "@specifiedBy" may not be used on ENUM.

1 @specifiedBy(url: "https://tools.ietf.org/html/rfc4122")
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
